[package]
name = "fdlimit"
version = "0.3.0"
authors = ["Parity Technologies<admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Utility crate for raising file descriptors limit for OSX and Linux"
repository = "https://github.com/paritytech/fdlimit"

[dependencies]
libc = "0.2"
thiserror = "1.0.50"
